tests/paczka2/big_fuzzy/78041817.err
Error in line 2: vUmL12yHKiD S921 68,0
Error in line 3: vUmL12yHKiD A986 99,8
Error in line 23: KdNpS A986 56,4
Error in line 42: vUmL12yHKiD A599 85,6
Error in line 47: KdNpS S921 64,6
Error in line 49: G3n1cW8IEic S921 85,6
Error in line 43: 2A6sIzUO3 A599 54,8
Error in line 57: 2A6sIzUO3 A951 95,7
Error in line 69: 2A6s®zUO3 A986 17,6
Error in line 73: 2A6sIzUO3 A599 29,3
Error in line 89: lULbOueE A599 34,61
Error in line 94: B6oed3AL A986 62,0
Error in line 95: 2A6sIzUO3 A599 56,4
Error in line 96: lULbOueE A986 8,9
Error in line 97: B6oed3AL A951 48,1
Error in line 123: B6oed3AL A986 50,9
Error in line 132: A599 S921 60,5
Error in line 120: G3n1cW8IEic A951 68,7
Error in line 129: lULbOueE A951 34,2
Error in line 136: lULbOueE A599 18,5
Error in line 146: KdNpS A986 38,6
Error in line 124: B6oed3AL A951 19,8
Error in line 151: lULbOueE S921 -3,6
Error in line 149: B6oed3AL A599 96,0
Error in line 147: KdNpS A599 83,5
Error in line 153: KdNpS A951 77,4
Error in line 145: lULbOueE S921 39,5
Error in line 160: A599 A599 5E,5
Error in line 152: B6oed3AL A986 30,4
Error in line 155: 2A6sIzUO3 A951 50,3
Error in line 154: KdNpS A599 42,0
Error in line 161: B6oed3AL S921 27,8
Error in line 166: B6oed3AL A599 49,5
Error in line 168: 2A6sIzUO3 S921 44,1
Error in line 164: KdNpS A951 60,2
Error in line 170: G3n1cW8IEic A986 67,6
Error in line 172: vUmL12yHKiD A951 14,0
Error in line 182: lULbOueE A951 86,8
Error in line 183: lULbOueE A599 55,1
Error in line 180: vUmL12yHKiD S921 18,6
Error in line 195: KdNpS A951 99,4
Error in line 198: KdNpS A986 93,8
Error in line 199: KdNpS S921 96,4
Error in line 150: A599 A599 12,1
Error in line 209: vUmL12yHKiD S921 83,49
Error in line 213: G3n1cW8IEic A951 58,6
Error in line 208: A599 S921 76,5
Error in line 219: 2A6sIzUO3 A951 300,4
Error in line 210: vUmL12yHKiD S921 81,4
Error in line 243: B6oed3AL A951 95,0
